# us_old_car_price_prediction

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
models/: preprocessor.pkl  ridge_model.pkl
notebooks/: 01-EDA.ipynb  02-Transform.ipynb  Random_Forest.ipynb  XGBoost.ipynb
src/car_price/: __init__.py  cleaning.py  config.py  evaluate.py  inference.py
train/: Linear_Regression_Ridge.ipynb  Stacking_Regressor.ipynb  XGBoost.ipynb
